kubernetes/network_policies/lab/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: contenedor1
  name: contenedor1
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: contenedor1
  template:
    metadata:
      labels:
        app: contenedor1
    spec:
      containers:
      - image: anynou/contenedor1
        imagePullPolicy: IfNotPresent
        name: contenedor1
---
apiVersion: v1
kind: Service
metadata:
  name: svc-contenedor1
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: contenedor1
