kubernetes/network_policies/lab/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: contenedor2
  name: contenedor2
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: contenedor2
  template:
    metadata:
      labels:
        app: contenedor2
    spec:
      containers:
      - image: anynou/contenedor2
        imagePullPolicy: IfNotPresent
        name: contenedor2
---
apiVersion: v1
kind: Service
metadata:
  name: svc-contenedor2
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: contenedor2
