kubernetes/network_policies/lab/deploy3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: contenedor3
  name: contenedor3
  namespace: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: contenedor3
  template:
    metadata:
      labels:
        app: contenedor3
    spec:
      containers:
      - image: anynou/contenedor3
        imagePullPolicy: IfNotPresent
        name: contenedor3
---
apiVersion: v1
kind: Service
metadata:
  name: svc-contenedor3
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: contenedor3
