kubernetes/network_policies/lab/allow_c1_to_c3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-allow-c1-to-c3
spec:
  podSelector:
    matchLabels:
      app: contenedor3
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: contenedor1
    ports:
    - port: 80
